--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://discord.gg/tgSquFX4BR">
+    <meta http-equiv="refresh" content="0; url=https://discord.com/things">
 </head>
 <body>
 </body>
